fix overlapping + on spec accordions

--- a/project_tier/static/css/_specs.scss
+++ b/project_tier/static/css/_specs.scss
@@ -349,10 +349,12 @@ body.specs-section {
       font-weight: 700;
       border-bottom: none;
       padding: 0;
+      width: 95%;
     }
 
     a:before {
       color: #222222;
+      right: -1em;
     }
   }
 }
